--- a/8_HDC_HOST/index.html
+++ b/8_HDC_HOST/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HDC Host</title>
+        <title>hDC Host</title>
         <!-- icons- biblioteca de icones -->
         <link
             rel="stylesheet"
@@ -16,7 +16,29 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-        <h1>tettgstadvag</h1>
-        <i class="fas fa-shield-alt"></i>
+        <div class="container">
+            <div class="navbar-container">
+                <!--  
+                      O HTML semântico tem como objetivo descrever o significado do conteúdo 
+                      presente em documentos HTML, tornando-o mais claro tanto para programadores
+                      quanto para browsers e outras engines que processam essa informação. nav é uma tag semantica
+                    -->
+                <nav>
+                    <a href="#"><img class="logo" src="img/hdchostlogo.png" alt="hDc Host" /></a>
+                    <ul class="navbar-items">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Preços</a></li>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#" class="default-btn">Entrar</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <main>
+            <div class="main-banner">
+                <h1>hDC Host</h1>
+                <p>Os melhores serviços para projetos de todos os tamanhos!</p>
+            </div>
+        </main>
     </body>
 </html>
