--- a/8_HDC_HOST/index.html
+++ b/8_HDC_HOST/index.html
@@ -129,6 +129,14 @@
           </div>
         </div>
       </section>
+      <section class="search-domain-container">
+        <h2>Qual domínio você quer para seu site?</h2>
+        <p>Verifique se o domínio está disponível</p>
+        <form >
+            <input type="text" name="domain" id="domain" placeholder="Digite o domínio desejado"/>
+            <input type="submit" value="Procurar domínio"/>
+        </form>
+      </section>
     </main>
   </body>
 </html>
