--- a/9_FLEXBOX/index.html
+++ b/9_FLEXBOX/index.html
@@ -39,5 +39,41 @@
         <div class="box"></div>
         <div class="box"></div>
     </div>
+
+    <!-- gap -->
+
+    <div class="gap">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    </div>
+
+    <!-- order -->
+    <h2>Order</h2>
+    <div class="order">
+        <div class="box" id="three">3</div>
+        <div class="box" id="one">1</div>
+        <div class="box" id="two">2</div>
+    </div>
+
+     <!-- grow -->
+     <h2>Grow</h2>
+     <div class="grow">
+         <div class="box" ></div>
+         <div class="box big" ></div>
+         <div class="box" ></div>
+     </div>
+
+     
+     <!-- align-self -->
+     <h2> align-self</h2>
+     <div class="align-self">
+         <div class="box" ></div>
+         <div class="box self" ></div>
+         <div class="box" ></div>
+     </div>
 </body>
 </html>
