--- a/10_CLONE_HOME_INSTA/index.html
+++ b/10_CLONE_HOME_INSTA/index.html
@@ -17,7 +17,7 @@
                 <!-- Login e registro -->
                 <div id="form-container">
                     <div id="form-box">
-                        <img src="img/logo_instagram.png" alt="Instagram" />
+                        <img id="logo-insta" src="img/logo_instagram.png" alt="Instagram" />
                         <form id="login-form">
                             <input type="text" name="username" placeholder="Número de telefone, usuário ou e-mail" />
                             <input type="password" name="password" placeholder="Senha" />
@@ -29,8 +29,10 @@
                         </div>
                         <div id="other-links">
                             <div id="facebook-login">
-                                <img src="img/logo_facebook.svg" alt="Facebook Login" />
-                                <span>Entrar com o Facebook</span>
+                                <a href="#">
+                                    <img src="img/logo_facebook.svg" alt="Facebook Login" />
+                                    <span>Entrar com o Facebook</span>
+                                </a>
                             </div>
                             <div id="forgot-pass">
                                 <a href="">Esqueceu a senha?</a>
